add test result

--- a/YAMNet_Detection.ipynb
+++ b/YAMNet_Detection.ipynb
@@ -397,8 +397,8 @@
         "id": "YNx_qAVulJoI"
       },
       "source": [
-        "my_classes = ['crying_baby', 'others']\n",
-        "saved_model_path = './baby_crying_yamnet'"
+        "my_classes = ['crying_baby', 'laughing']\n",
+        "saved_model_path = './baby_crying_yamnet1'"
       ],
       "execution_count": null,
       "outputs": []
@@ -494,7 +494,7 @@
         "\n",
         "# extract embedding\n",
         "main_ds = main_ds.map(extract_embedding).unbatch()\n",
-        "#main_ds.element_spec"
+        "main_ds.element_spec"
       ],
       "execution_count": null,
       "outputs": []
@@ -714,6 +714,31 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "OQpPwMgeNLdj"
+      },
+      "source": [
+        "## Loading video"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "z4aZZv0-NXYI"
+      },
+      "source": [
+        "#my_clip = mp.VideoFileClip(r\"./datasets/Babies_Crying.mp4\")\n",
+        "#my_clip.audio.write_audiofile(r\"./datasets/Babies_Crying.wav\")\n",
+        "\n",
+        "\n",
+        "my_clip = mp.VideoFileClip(r\"./datasets/climbing.mp4\")\n",
+        "my_clip.audio.write_audiofile(r\"./datasets/climbing.wav\")"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "AALu0uwwNzJ3"
@@ -721,7 +746,8 @@
       "source": [
         "#test_laughing_data = load_wav_16k_mono('./datasets/ESC-50-master/audio/4-155670-A-26.wav')\n",
         "#test_crying_data = load_wav_16k_mono('./datasets/ESC-50-master/audio/4-167077-A-20.wav')\n",
-        "aaa = load_wav_16k_mono('./datasets/Babies_Crying.wav')"
+        "#test_data = load_wav_16k_mono('./datasets/Babies_Crying.wav')\n",
+        "test_data = load_wav_16k_mono('./datasets/climbing.wav')"
       ],
       "execution_count": null,
       "outputs": []
@@ -745,33 +771,11 @@
       },
       "source": [
         "# test in new data file\n",
-        "reloaded_results = reloaded_model(aaa)\n",
+        "reloaded_results = reloaded_model(test_data)\n",
         "print(reloaded_results)\n",
         "\n",
         "baby_sound = my_classes[tf.argmax(reloaded_results)]\n",
         "print(f'The main sound is: {baby_sound}')"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "OQpPwMgeNLdj"
-      },
-      "source": [
-        "## Loading video"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "z4aZZv0-NXYI"
-      },
-      "source": [
-        "my_clip = mp.VideoFileClip(r\"./datasets/Babies_Crying.mp4\")\n",
-        "\n",
-        "my_clip.audio.write_audiofile(r\"./datasets/Babies_Crying.wav\")"
       ],
       "execution_count": null,
       "outputs": []
@@ -794,7 +798,7 @@
         "sample_rate = 16000\n",
         "rate = 44100\n",
         "\n",
-        "duration = len(aaa)/sample_rate\n",
+        "duration = len(test_data)/sample_rate\n",
         "\n",
         "print(f'Total duration: {duration:.2f}s')\n",
         "\n",
@@ -803,12 +807,11 @@
         "  end   = (i+5)*sample_rate\n",
         "  print('duration from {:d} -- {:d}'.format(i, i+5))\n",
         "\n",
-        "  wav_data = aaa[start:end]\n",
-        "  print(wav_data.dtype)\n",
+        "  wav_data = test_data[start:end]\n",
         "\n",
         "  reloaded_results = reloaded_model(wav_data)\n",
         "  baby_sound = my_classes[tf.argmax(reloaded_results)]\n",
-        "  print(f'The main sound is: {baby_sound}')\n",
+        "  print(f'The main sound is: {baby_sound}, score: {reloaded_results}')\n",
         "\n",
         "  filename = 'clip-{:d}.wav'.format(i)\n",
         "\n",
@@ -864,6 +867,95 @@
         "    reloaded_results = reloaded_model(wav_data)\n",
         "    baby_sound = my_classes[tf.argmax(reloaded_results)]\n",
         "    print(f'The main sound is: {baby_sound}')"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "KJrocIZ1kIMS"
+      },
+      "source": [
+        "def group_action(actions):\n",
+        "    groups = {}\n",
+        "    \n",
+        "    for dic in actions:\n",
+        "        key = ''\n",
+        "        val = ''\n",
+        "        for i, v in dic.items():\n",
+        "            if i == 'time':\n",
+        "                val = v\n",
+        "            if i == 'action':\n",
+        "                key = v\n",
+        "        groups[key] = [val] if key not in groups.keys() else groups[key] + [val]\n",
+        "    return groups"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "TOReJOCOkJSH"
+      },
+      "source": [
+        "def get_period(index, name, groups):\n",
+        "    periods = []\n",
+        "    if name in groups:\n",
+        "        group = groups.get(name)\n",
+        "        for i in range(len(group)):\n",
+        "            periods.append({'id':'{:s}_{:d}'.format(index, i), 'start':group[i], 'end':group[i]+5})\n",
+        "    return periods"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "D7SVRxkWxTfK"
+      },
+      "source": [
+        "video = []\n",
+        "actions=[{'time': 0, 'action': 'Climb'}, {'time': 5, 'action': 'Climb'}, {'time': 10, 'action': 'Climb'}, {'time': 15, 'action': 'Climb'}, {'time': 20, 'action': 'Climb'}, {'time': 25, 'action': 'Climb'}, {'time': 30, 'action': 'Climb'}]\n",
+        "periods = group_action(actions)\n",
+        "print(periods)\n",
+        "\n",
+        "# group base\n",
+        "groups = [{'1':'Climb', '2':'Crawl', '3':'Roll', '4':'Walk'}]\n",
+        "for dic in groups:\n",
+        "    for id, name in dic.items():\n",
+        "        period = get_period(id, name, periods)\n",
+        "        video.append({'id': id, 'name': name, 'period': period})\n",
+        "print(video)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "j3YYJo5l77UL"
+      },
+      "source": [
+        "video = []\n",
+        "groups = [{'1':'Climb', '2':'Crawl', '3':'Roll', '4':'Walk'}]\n",
+        "for dic in groups:\n",
+        "    for id, name in dic.items():\n",
+        "        video.append({'id': id, 'name': name})\n",
+        "print(video)          "
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "y3tXYJXx5rV0"
+      },
+      "source": [
+        ""
       ],
       "execution_count": null,
       "outputs": []
